fixing spelling offeces to offices and shifting the pick downwats to insert the own pic

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ width:90%;
     height      :100% ;
     border      :2px solid blueviolet;
     background-color: rgb(255, 123, 0);
+    margin-top: -20px;
 }
 #body_all{
     border : 80px solid rgb(43, 226, 186);
@@ -126,6 +127,8 @@ width:90%;
 .pic{
     border:3px solid greenyellow;
     border-radius:50px;
+    margin-top:300px;
+    padding-top: 0px;
 }
 #off1{
     width:100%;
